<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/black">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/imageViewParent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:maxHeight="@dimen/_200sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintVertical_bias="00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/hashTagImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileImageParent"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="@id/imageViewParent"
            app:layout_constraintTop_toBottomOf="@id/imageViewParent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dummy_name"
            android:textSize="@dimen/_12ssp"
            android:ellipsize="end"
            android:fontFamily="@font/bold"
            android:maxWidth="@dimen/_150sdp"
            android:paddingHorizontal="@dimen/_6sdp"
            app:layout_constraintTop_toTopOf="@+id/profileImageParent"
            app:layout_constraintBottom_toBottomOf="@id/profileImageParent"
            app:layout_constraintStart_toEndOf="@id/profileImageParent"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orderDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dummy_name"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/medium"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:ellipsize="end"
            android:maxLines="10"
            app:layout_constraintStart_toStartOf="@+id/profileImageParent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageParent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orderPostDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/dummy_days"
            android:textSize="@dimen/_9ssp"
            android:alpha="0.5"
            android:fontFamily="@font/bold"
            android:ellipsize="end"
            android:paddingVertical="@dimen/_4sdp"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/orderDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderDescription"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/brands"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/brands"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/bold"
            android:ellipsize="end"
            android:paddingVertical="@dimen/_4sdp"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/orderPostDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderPostDay"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brandsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brands"
            android:orientation="vertical"
            tools:itemCount="10"
            tools:listitem="@layout/item_brand"/>






    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
